--- a/week03/styles/place.css
+++ b/week03/styles/place.css
@@ -11,7 +11,6 @@
   --background-color: #f4f4f4;
 }
 
-
 *,
 *::before,
 *::after {
@@ -28,10 +27,7 @@ body {
   flex-direction: column;
   align-items: center;
   line-height: 1.6;
-  font-family: var(--main-font);
 }
-
-
 
 header,
 footer {
@@ -84,7 +80,7 @@ main {
   width: 100%;
   height: auto;
   border-radius: var(--border-radius);
-  object-fit: contain; /* Ensures full image is visible */
+  object-fit: contain;
 }
 
 /* Content sections */
