updated filtered-temples.html anfiltered-temples.css

--- a/styles/filtered-temples.css
+++ b/styles/filtered-temples.css
@@ -46,3 +46,8 @@ nav ul li button {
   height: auto;
   border-radius: 5px;
 }
+
+nav a:hover {
+  color: #0077cc;
+  text-decoration: underline;
+}
